--- a/TODO
+++ b/TODO
@@ -1,2 +1,6 @@
 * Make camp theme more distinct
 * TinyMCE should trust all html including script tags (newly-diagnosed page)
+* Add homepage news
+* Add FactorNet links
+* Add Baxter ad (and remove other logos)
+* Add images to pages
