--- a/TODO
+++ b/TODO
@@ -3,5 +3,5 @@
 * Add homepage news
 * Add FactorNet links
 * Add Baxter ad (and remove other logos)
-* Add images to pages
 * Make common theme parts a parent template
+* Add Camp and What We Do >>... to menu bar
