--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@
 * TinyMCE should trust all html including script tags (newly-diagnosed page)
 * Add Baxter ad (and remove other logos)
 * fix 'documants' upload path
+* Refactor *Action models to inherit from a common abstract base class
